# pylaude-code

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.codex/: config.toml
.skills/architecture-reconstruction/: SKILL.md
.skills/cli-repl-port/: SKILL.md
.skills/config-settings-unification/: SKILL.md
.skills/cutover-plan/: SKILL.md
.skills/mcp-plugin-port/: SKILL.md
.skills/parity-test-harness/: SKILL.md
.skills/permissions-sandbox-port/: SKILL.md
.skills/runtime-invariants/: SKILL.md
.skills/security-hardening/: SKILL.md
.skills/session-persistence-port/: SKILL.md
.skills/ts-to-python-port/: SKILL.md
docs/porting/: architecture-map.md  invariants.md  parity-matrix.md  python-port-plan.md
pylaude/: __init__.py  __main__.py
pylaude/bootstrap/: __init__.py  context.py  pipeline.py
pylaude/cli/: __init__.py  main.py
pylaude/mcp/: __init__.py  models.py
pylaude/models/: __init__.py  messages.py
pylaude/permissions/: __init__.py  policy.py
pylaude/plugins/: __init__.py  models.py
pylaude/runtime/: __init__.py  authorities.py  parity.py  trace_manifest.py
pylaude/sessions/: __init__.py  models.py
pylaude/settings/: __init__.py  precedence.py  sources.py
pylaude/telemetry/: __init__.py  events.py
pylaude/tools/: __init__.py  registry.py
pylaude/ui/: __init__.py  controller.py
tests/parity/: test_porting_contract.py
tests/parity/fixtures/: mcp_plugin_discovery.json  (+4 more)
tests/replay/: test_session_models.py
tests/unit/: test_bootstrap_pipeline.py  test_parity_compare.py  test_permission_policy.py  test_settings_precedence.py
(+1 files in other folders)
